[package]
name = "tailwag_forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [
#     "macros",
#     "macros/logic",
# ]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.113"
tailwag_forms_macros = { version = "0.1.0", path = "macros" }
tailwag_utils = { version = "0.1.0", path = "../utils" }
