[lib]
proc_macro = true

[package]
name = "tailwag_forms_macros"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_forms"
description = "The macro exports for supporting the tailwag_forms crate."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.39", features = ["extra-traits"] }
tailwag_utils = { version = "0.1.1", path = "../../utils" }
