[package]
name = "tailwag_forms_macro_logic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_forms"
description = "The logic for a suite of macros supporting the tailwag_forms crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
tailwag_utils = { path = "../../../utils" }